# hmatrix-gsl-mwe

./: .gitignore  README.md  flake.nix  mwe.cabal
src/: MWE.hs
tests/: doctests.hs
